# NyavaScript

./: 1  Cargo.toml  README.md  ]  diagram.txt  out.txt
src/: eval.rs  lib.rs  main.rs  parse.rs  parse_syntax.rs
src/data/: abstract.rs  list.rs  mod.rs
src/evaluate/: context.rs  environment.rs  mod.rs  test.rs
src/evaluate/environment/: debug_scope.rs  fun_scope.rs  mccarthy_scope.rs  mod.rs  test.rs
src/evaluate/error/: mod.rs  unbound_fn_call_error.rs
src/expression/: atom.rs  cons_cell.rs  list.rs  mod.rs
src/expression/cons_cell/: iter.rs  mod.rs  test.rs
src/expression/meta/: lambda.rs  macro.rs  mod.rs  rust_lambda.rs  rust_macro.rs
src/parse/: mod.rs  test.rs
src/parse/data/: expression.rs  mod.rs  symbol.rs  syntax.rs
src/parse/lexical/: mod.rs  test.rs
src/parse/lexical_analysis/: error.rs  mod.rs  test.rs  token.rs
src/parse/semantic/: mod.rs  special.rs  test.rs
src/parse/semantic_analysis/: error.rs  mod.rs  test.rs
src/parse/syntactic_analysis/: error.rs  mod.rs  syntax.rs  test.rs
src/parse/syntax/: errors.rs  mod.rs  test.rs
src/s_expression/: function.rs  list.rs  macro.rs  mod.rs  rust_function.rs  rust_macro.rs  test.rs
src/s_expression/cons_cell/: iter.rs  mod.rs  test.rs
src/s_expression/function/: mod.rs  test.rs
src/s_expression/macro/: mod.rs  test.rs
src/s_expression/meta/: lambda.rs  macro.rs  mod.rs  rust_lambda.rs  rust_macro.rs
src/s_expression/s_expression_ref/: iter.rs  maybe_rc.rs  mod.rs  test.rs
src/s_expression/util/: mod.rs  test.rs
src/value/: list.rs  mod.rs
src/value/cons_cell/: iter.rs  (+1 more)
(+58 files in other folders)
