[package]
name = "nyavascript"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
authors = ["Sean DiGirolamo <s.digirolamo218@gmail.com>"]
description = "Lisp implementation. Called NyavaScript because I'm a monster"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
